common/common.scss
.sidebar-footer-actions {
  display: flex;
  align-items: center;
  width: 100%;
  @if $hide-theme-name == "true" {
    width: auto;
  }
}

.sidebar-theme-toggle__wrapper {
  display: flex;
  position: relative;
  min-width: 0;
  margin-right: auto;
  padding-right: 1em;

  .mobile-view & {
    margin-left: -0.33em; // optical alignment
  }

  @if $hide-theme-name == "true" {
    margin-right: 0;
    padding-right: 0.5em;
  }

  .select-kit.single-select {
    .select-kit-header:not(.btn) {
      &:focus,
      &:active,
      &:hover {
        outline: none;
        background: var(--d-sidebar-highlight-color);
      }
    }
  }

  > .d-icon {
    // this positoning is a little hacky
    // but it makes the icon part of the selectable area
    position: absolute;
    height: 100%;
    font-size: 0.85em;
    color: var(--primary-medium);
    left: 0.75em;
    @if $hide-theme-name == "true" {
      left: 0.5em;
    }
    bottom: -1px; // optical alignment
    z-index: z("dropdown") + 1;
    pointer-events: none;
  }
}

.sidebar-theme-toggle-dropdown {
  display: inline-flex;
  align-self: stretch;
  font-size: var(--font-down-1);
  color: var(--primary-high);
  z-index: 1;
  position: relative;
  min-width: 0;
  flex: 1 1 auto;

  .select-kit-body {
    // !importants for overriding some inline styles
    width: 16.5em !important;
    @if $hide-theme-name == "true" {
      transform: translate(1em, -3em) !important;
      min-width: unset !important;
    }
  }

  &.select-kit.combo-box .select-kit-header {
    padding-left: 3em;
    @if $hide-theme-name == "true" {
      padding: 1em;
    }
    height: 100%;
    border: none;
    background: transparent;
    position: relative;

    .select-kit-header-wrapper {
      margin-left: -0.5em;
      width: calc(100% + 0.5em);
    }

    .selected-name {
      white-space: nowrap;
      min-width: 0;
      @if $hide-theme-name == "true" {
        display: none;
      }
    }
    .caret-icon {
      color: var(--primary-low-mid);
      @if $hide-theme-name == "true" {
        display: none;
      }
    }

    .name {
      min-width: 0;
      @include ellipsis;
    }
  }
}

